<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.condorcet.geolocalisation.AuthentificationActivity" >
	
    <TextView
            android:id="@+id/lbinscription"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:width="@dimen/largeur_etiquette"
            android:layout_gravity="center" />
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lbnom"
            android:textSize="@dimen/taille_etiquette"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:width="@dimen/largeur_etiquette" />

        <EditText
            android:id="@+id/ednom"
            android:layout_width="wrap_content"
            android:background="@drawable/border"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintnom"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >
        </EditText>
    </LinearLayout>    
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lbprenom"
            android:textSize="@dimen/taille_etiquette"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenom"
            android:width="@dimen/largeur_etiquette" />

        <EditText
            android:id="@+id/edprenom"
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintprenom"
            android:ems="10"
            android:inputType="textPersonName" 
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
        </EditText>
    </LinearLayout>    
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lblogin"
            android:textStyle="bold"
            android:textSize="@dimen/taille_etiquette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:width="@dimen/largeur_etiquette" />

        <EditText
            android:id="@+id/edlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:hint="@string/hintlogin"
            android:ems="10"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
             >
        </EditText>
    </LinearLayout>   
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lbpasswd"
            android:textStyle="bold"
            android:textSize="@dimen/taille_etiquette"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/password"
            android:width="@dimen/largeur_etiquette" />

        <EditText
            android:id="@+id/edpasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:hint="@string/hintpassword"
            android:ems="10"
            android:inputType="textPassword" 
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
        </EditText>
    </LinearLayout>

	<Button
	    android:id="@+id/btinscrire"
	    android:layout_width="wrap_content"
	    android:text="@string/inscrire" 
	    android:layout_height="@dimen/taille_bouton"
	    android:gravity="center"
	    android:layout_gravity="right" 
	    android:textSize="@dimen/text_bouton"/>
	
	 <TextView
            android:id="@+id/lbconnexion"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            android:width="@dimen/largeur_etiquette"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lbloginconnexion"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/taille_etiquette"
            android:text="@string/loginconnexion"
            android:width="@dimen/largeur_etiquette" />

        <EditText
            android:id="@+id/edloginconnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_weight="1"
            android:hint="@string/hintlogin"
            android:ems="10"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
             >
        </EditText>
    </LinearLayout>   
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/lbpasswdconnexion"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/taille_etiquette"
            android:layout_height="50dp"
            android:text="@string/passwdconnexion"
            android:width="@dimen/largeur_etiquette" />

        <EditText
            android:id="@+id/edpasswdconnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:hint="@string/hintpassword"
            android:ems="10"
            android:inputType="textPassword" 
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            >
        </EditText>
    </LinearLayout>
    
	<Button
	    android:id="@+id/btconnecter"
	    android:layout_width="wrap_content"
	    android:layout_height="@dimen/taille_bouton"
	    android:textSize="@dimen/text_bouton"
	    android:text="@string/connecter" 
	    android:gravity="center"
	    android:layout_gravity="right" 
	    />
	
	</LinearLayout>

