<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.condorcet.geolocalisation.MenuActivity" >

   
        <Button
            android:id="@+id/btcreer"
            android:layout_gravity="center"
            android:width="@dimen/largeur_etiquette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gestionCreer"
            android:text="@string/creer" />

        <Button
            android:id="@+id/btlister"
            android:layout_gravity="center"
            android:width="@dimen/largeur_etiquette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gestionLister"
            android:text="@string/lister" />

        <Button
            android:id="@+id/btrechercher"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:width="@dimen/largeur_etiquette"
            android:layout_height="wrap_content"
            android:onClick="gestionRechercher"
            android:text="@string/rechercher" />

        <Button
            android:id="@+id/btconsulter"
            android:layout_gravity="center"
            android:width="@dimen/largeur_etiquette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gestionConsulter"
            android:text="@string/consulter" />
        
                

</LinearLayout>